# keboola-dbt-adapter

./: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml  requirements.txt
dbt/adapters/keboola/: __init__.py  column.py  connections.py  impl.py  relation.py
dbt/include/keboola/: dbt_project.yml
dbt/include/keboola/macros/: adapters.sql  catalog.sql
dbt/include/keboola/macros/materializations/: incremental.sql  table.sql  view.sql
docs/: CODE_QUALITY_ASSESSMENT.md
sample_project/: .user.yml  README.md  dbt_project.yml  profiles.yml
sample_project/models/: test_simple.sql
sample_project/models/marts/: events_incremental.sql  schema.yml
sample_project/models/staging/: schema.yml  stg_event_summary.sql  stg_events.sql
