[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-keboola"
version = "0.1.0"
description = "dbt adapter for Keboola Query Service"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Keboola", email = "support@keboola.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "dbt-core>=1.5.0,<2.0.0",
    "dbt-adapters>=1.0.0",
    "keboola-query-service",
    "agate>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.entry-points."dbt.adapter"]
keboola = "dbt.adapters.keboola"

[tool.setuptools.packages.find]
where = ["."]
include = ["dbt", "dbt.*"]

[tool.setuptools.package-data]
"dbt.include.keboola" = ["macros/**/*.sql", "dbt_project.yml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
